--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.2.1",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
